--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-APP_NAME="E-SHOP"
+APP_NAME="L-SHOP"
 APP_ENV=local
 APP_KEY=base64:7vdVcQw+ZQpCNJpC2qrJujiaRbgSMFooQKhntAF5yAY=
 APP_DEBUG=true
@@ -28,19 +28,13 @@ MAIL_PORT=2525
 MAIL_USERNAME=
 MAIL_PASSWORD=
 MAIL_ENCRYPTION=null
-MAIL_FROM_ADDRESS=info@asima.agency
+MAIL_FROM_ADDRESS=lshop@test.com
 MAIL_FROM_NAME="${APP_NAME}"
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
 AWS_DEFAULT_REGION=ap-southeast-1
 AWS_BUCKET=
-
-WASABI_REGION=
-WASABI_ACCESS_KEY=
-WASABI_SECRET_ACCESS_KEY=
-WASABI_ENDPOINT=
-WASABI_BUCKET_NAME=
 
 PUSHER_APP_ID=
 PUSHER_APP_KEY=
@@ -52,9 +46,3 @@ MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
 RAJAONGKIR_API_KEY=
 
-LOG_DB_CONNECTION=log_mysql
-LOG_DB_HOST=
-LOG_DB_PORT=
-LOG_DB_DATABASE=log_database
-LOG_DB_USERNAME=
-LOG_DB_PASSWORD=
